--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "main": "server.js",
   "scripts": {
-    "start": "babel-node server.js",
+    "start": "NODE_ENV=development babel-node server.js",
     "lint": "eslint src server.js api.js webpack.confing.js"
   },
   "engines": {
@@ -14,13 +14,16 @@
   },
   "dependencies": {
     "body-parser": "^1.15.2",
+    "draft-js": "^0.9.1",
     "express": "^4.14.0",
     "isomorphic-fetch": "^2.2.1",
+    "material-ui": "^0.16.5",
     "mongoose": "^4.7.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-quill": "^0.4.1",
-    "react-tagsinput": "^3.13.6"
+    "react-tagsinput": "^3.13.6",
+    "react-tap-event-plugin": "^2.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
@@ -36,6 +39,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.6.0",
+    "react-quill": "^0.4.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
